--- a/Sucesiones/Ejemplo_gene.tex
+++ b/Sucesiones/Ejemplo_gene.tex
@@ -1,5 +1,5 @@
 \sect{Ejemplo de uso}
-Se puede ver del algoritmo, que el uso de este algoritmo viene bastante
+Se puede ver del algoritmo, que el uso de este, viene bastante
 bien para la obtención de expresiones polinómicas.
 
 Un caso particular de esto sería la suma de $n$ números naturales elevados
@@ -9,8 +9,8 @@ al cuadrado. Partimos de unos cuantos términos, hallados manualmente:
 
 Entonces, hacemos iteraciones hasta poder conjeturar un resultado:
 
-\begin{center}
-    \begin{derivation}<1.5>
+\[
+    \begin{matrix*}[l]
         a_0(n) &=& 0\\
         a_1(n) &=& (1-0)n = n\\
         a_2(n) &=& \dfrac{1}{2}(5 - 2)n(n-1) + n = \dfrac{n(3n - 1)}{2}\\
@@ -18,8 +18,8 @@ Entonces, hacemos iteraciones hasta poder conjeturar un resultado:
         = \dfrac{n(n+1)(2n+1)}{6}\\
         a_4(n) &=& \dfrac{1}{24}(30 - 30)n(n-1)(n-2)(n-3) + \dfrac{n(n+1)(2n+1)}{6}
         = a_3(n)
-    \end{derivation}
-\end{center}
+    \end{matrix*}
+\]
 
 En el momento en el que una iteración $k$ funciona para el término deseado en $k+1$,
 es momento de detenerse. Es bueno ver si en siguientes valores también cumple, y de ser
