--- a/Sucesiones/Ejemplo_gene.tex
+++ b/Sucesiones/Ejemplo_gene.tex
@@ -1,7 +1,6 @@
 \sect{Ejemplo de uso}
 Se puede ver del algoritmo, que el uso de este, viene bastante
-bien para la obtención de expresiones polinómicas.
-
+bien para la obtención de expresiones polinómicas.\\
 Un caso particular de esto sería la suma de $n$ números naturales elevados
 al cuadrado. Partimos de unos cuantos términos, hallados manualmente:
 
@@ -10,6 +9,7 @@ al cuadrado. Partimos de unos cuantos términos, hallados manualmente:
 Entonces, hacemos iteraciones hasta poder conjeturar un resultado:
 
 \[
+    \RenewDocumentCommand{\arraystretch}{}{2}
     \begin{matrix*}[l]
         a_0(n) &=& 0\\
         a_1(n) &=& (1-0)n = n\\
