--- a/Sucesiones/Ejemplo_gene.tex
+++ b/Sucesiones/Ejemplo_gene.tex
@@ -1,6 +1,5 @@
 \sect{Ejemplo de uso}
-Se puede ver del algoritmo, que el uso de este, viene bastante
-bien para la obtención de expresiones polinómicas.\\
+Como sabemos, el algoritmo puede generar expresiones polinómicas.\\
 Un caso particular de esto sería la suma de $n$ números naturales elevados
 al cuadrado. Partimos de unos cuantos términos, hallados manualmente:
 
